AAA.txt~
./src/ray/src/common/resolu.h:72:49: error: unknown type name ‘FILE’
 extern void fputresolu(int ord, int sl, int ns, FILE *fp);
                                                 ^
./src/ray/src/common/resolu.h:73:41: error: unknown type name ‘FILE’
 extern int fgetresolu(int *sl, int *ns, FILE *fp);
                                         ^
./src/ray/src/common/resolu.h:77:32: error: unknown type name ‘FILE’
 extern void newheader(char *t, FILE *fp);
                                ^
./src/ray/src/common/resolu.h:81:32: error: unknown type name ‘FILE’
 extern void fputdate(time_t t, FILE *fp);
                                ^
./src/ray/src/common/resolu.h:82:21: error: unknown type name ‘FILE’
 extern void fputnow(FILE *fp);
                     ^
./src/ray/src/common/resolu.h:83:42: error: unknown type name ‘FILE’
 extern void printargs(int ac, char **av, FILE *fp);
                                          ^
./src/ray/src/common/resolu.h:85:33: error: unknown type name ‘FILE’
 extern void fputformat(char *s, FILE *fp);
                                 ^
./src/ray/src/common/resolu.h:87:22: error: unknown type name ‘FILE’
 extern int getheader(FILE *fp, gethfunc *f, void *p);
                      ^
./src/ray/src/common/resolu.h:89:24: error: unknown type name ‘FILE’
 extern int checkheader(FILE *fin, char *fmt, FILE *fout);
                        ^
./src/ray/src/common/resolu.h:89:46: error: unknown type name ‘FILE’
 extern int checkheader(FILE *fin, char *fmt, FILE *fout);
                                              ^
./src/buildBSDF.c: In function ‘load_XML’:
./src/buildBSDF.c:209:40: warning: unused variable ‘ref_back’ [-Wunused-variable]
  ezxml_t tr_front, tr_back, ref_front, ref_back, wavelength_data, wavelength_data_block;
                                        ^
./src/buildBSDF.c:209:29: warning: unused variable ‘ref_front’ [-Wunused-variable]
  ezxml_t tr_front, tr_back, ref_front, ref_back, wavelength_data, wavelength_data_block;
                             ^
./src/buildBSDF.c:209:20: warning: unused variable ‘tr_back’ [-Wunused-variable]
  ezxml_t tr_front, tr_back, ref_front, ref_back, wavelength_data, wavelength_data_block;
                    ^
./src/buildBSDF.c:209:10: warning: unused variable ‘tr_front’ [-Wunused-variable]
  ezxml_t tr_front, tr_back, ref_front, ref_back, wavelength_data, wavelength_data_block;
          ^
./src/buildBSDF.c: In function ‘glass_BSDF’:
./src/buildBSDF.c:263:12: warning: value computed is not used [-Wunused-value]
  for(i=0, i<dim,i++){
            ^
./src/buildBSDF.c:263:12: warning: value computed is not used [-Wunused-value]
./src/buildBSDF.c:263:20: error: expected ‘;’ before ‘)’ token
  for(i=0, i<dim,i++){
                    ^
./src/buildBSDF.c:263:20: error: expected expression before ‘)’ token
./src/buildBSDF.c: In function ‘main’:
./src/buildBSDF.c:296:154: warning: unused variable ‘inter2’ [-Wunused-variable]
  float Tf[dim][dim], Tb[dim][dim], Rf[dim][dim], Rb[dim][dim], prop[dim][dim], rf[dim][dim], rb[dim][dim], tf[dim][dim], tb[dim][dim], inter1[dim][dim], inter2[dim][dim];
                                                                                                                                                          ^
./src/buildBSDF.c:296:136: warning: unused variable ‘inter1’ [-Wunused-variable]
  float Tf[dim][dim], Tb[dim][dim], Rf[dim][dim], Rb[dim][dim], prop[dim][dim], rf[dim][dim], rb[dim][dim], tf[dim][dim], tb[dim][dim], inter1[dim][dim], inter2[dim][dim];
                                                                                                                                        ^
./src/buildBSDF.c:296:50: warning: unused variable ‘Rb’ [-Wunused-variable]
  float Tf[dim][dim], Tb[dim][dim], Rf[dim][dim], Rb[dim][dim], prop[dim][dim], rf[dim][dim], rb[dim][dim], tf[dim][dim], tb[dim][dim], inter1[dim][dim], inter2[dim][dim];
                                                  ^
./src/buildBSDF.c:296:36: warning: unused variable ‘Rf’ [-Wunused-variable]
  float Tf[dim][dim], Tb[dim][dim], Rf[dim][dim], Rb[dim][dim], prop[dim][dim], rf[dim][dim], rb[dim][dim], tf[dim][dim], tb[dim][dim], inter1[dim][dim], inter2[dim][dim];
                                    ^
./src/buildBSDF.c:296:22: warning: unused variable ‘Tb’ [-Wunused-variable]
  float Tf[dim][dim], Tb[dim][dim], Rf[dim][dim], Rb[dim][dim], prop[dim][dim], rf[dim][dim], rb[dim][dim], tf[dim][dim], tb[dim][dim], inter1[dim][dim], inter2[dim][dim];
                      ^
./src/buildBSDF.c:296:8: warning: unused variable ‘Tf’ [-Wunused-variable]
  float Tf[dim][dim], Tb[dim][dim], Rf[dim][dim], Rb[dim][dim], prop[dim][dim], rf[dim][dim], rb[dim][dim], tf[dim][dim], tb[dim][dim], inter1[dim][dim], inter2[dim][dim];
        ^
make: *** [buildBSDF.o] Error 1
